--- a/src/calculator.html
+++ b/src/calculator.html
@@ -19,8 +19,9 @@
   </head>
   <body>
     <header>
-      <a href="/calculator.html"></a>
+      <a href="index.html"></a>
     </header>
     <main></main>
+    <script type="module" src="./js/calculator.js"></script>
   </body>
 </html>
